# BackStab

./: README.md
Backstab-Django/: .env.dev  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
Backstab-Django/app/: Dockerfile  entrypoint.sh  requirements.txt
Backstab-Django/app/backstab/: settings.py  urls.py
Backstab-Django/app/core/: models.py  serializers.py  steam_api.py  urls.py  views.py
Backstab-Django/app/core/migrations/: 0001_initial.py  0002_game_gameid_gamediscount_discount_and_more.py  0003_alter_game_gamename_alter_gameimage_gameimages_and_more.py
Backstab-Django/app/core/scripts/: getSteamData.py
Backstab-Django/app/core/serializers/: core_serializers.py
Backstab-Django/backstab/: asgi.py  settings.py  wsgi.py
Backstab-Django/core/: models.py  urls.py  views.py
Backstab-Django/scripts/: getSteamData.py
Backstab_Frontend_Angular/: README.md  angular.json  package-lock.json  package.json
Backstab_Frontend_Angular/src/: getter.service.ts  styles.css
Backstab_Frontend_Angular/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts
Backstab_Frontend_Angular/src/app/home/: home.component.css  home.component.html  home.component.ts
Backstab_Frontend_Angular/src/model/: Game.ts
