[tool.poetry]
name = "Backstab"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.3.2"
astroid = "2.3.3"
certifi = "2021.5.30"
charset-normalizer = "2.0.4"
Django = "3.2.15"
django-cors-headers = "3.2.1"
django-environ = "0.4.5"
django-filter = "2.2.0"
djangorestframework = "3.11.0"
geographiclib = "1.50"
geopy = "1.22.0"
gunicorn = "20.0.4"
isort = "4.3.21"
lazy-object-proxy = "1.4.3"
Markdown = "3.2.1"
mccabe = "0.6.1"
mutagen = "1.44.0"
Pillow = "8.3.1"
psycopg2 = "2.8.5"
psycopg2-binary = "2.8.5"
pylint = "2.4.4"
pylint-django = "2.0.14"
pylint-plugin-utils = "0.6"
pytz = "2019.3"
requests = "~=2.25.1"
six = "1.14.0"
sqlparse = "0.3.1"
urllib3 = "1.26.6"
whitenoise = "5.0.1"
django-tailwind = "^3.4.0"
authorizenet = "^1.1.4"
django-plausible = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
